--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   <title>Beautiful Nature</title>
 </head>
 <body>
-  <div class="header"></div>
+  <div class="header">
+    <img src="./img/tree-logo.png" alt="header logo">
+    <ul>
+        <li><a href="#">Search</a></li>
+        <li><a href="#">Community</a></li>
+        <li><a href="#">Log in</a></li>
+    </ul>
+  </div>
   <div class="content">
     <div class="auth-header"></div>  
     <div class="pictures"></div>
