Add auth header content and minor changes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beautiful Nature</title>
+  <title>Space</title>
 </head>
 <body>
   <div class="header">
-    <img src="./img/tree-logo.png" alt="header logo">
+    <img src="./img/globe-logo.png" alt="header logo">
     <ul>
         <li><a href="#">Search</a></li>
         <li><a href="#">Community</a></li>
@@ -16,7 +16,14 @@
     </ul>
   </div>
   <div class="content">
-    <div class="auth-header"></div>  
+    <div class="auth-header">
+        <div>
+          <div>Join us</div>
+          <div>Let`s discover space together!</div>
+          <button>Sign up</button>
+        </div>
+        <img src="" alt="auth header logo">
+    </div>  
     <div class="pictures"></div>
     <div class="quote"></div>
     <div class="auth-footer"></div>
