Add picture to auth-header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div>Let`s discover space together!</div>
           <button>Sign up</button>
         </div>
-        <img src="" alt="auth header logo">
+        <img src="./img/earth-sunset.jpg" alt="auth header logo">
     </div>  
     <div class="pictures"></div>
     <div class="quote"></div>
