Extend pictures section

--- a/index.html
+++ b/index.html
@@ -22,10 +22,32 @@
           <div>Let`s discover space together!</div>
           <button>Sign up</button>
         </div>
-        <img src="./img/earth-sunset.jpg" alt="auth header logo">
+        <img src="./img/earth-sunset.jpg" alt="auth header picture">
     </div>  
-    <div class="pictures"></div>
-    <div class="quote"></div>
+    <div class="pictures">
+      <div class="pictures-header">Amazing views from different parts of space</div>
+      <div class="overview-container">
+        <div class="overview">
+          <img src="./img/galaxy.jpg" alt="galaxy picture">
+          <div class="overview-text">Galaxies</div>
+        </div>
+        <div class="overview">
+          <img src="./img/nebula.jpg" alt="nebula picture">
+          <div class="overview-text">Nebulas</div>
+        </div>
+        <div class="overview">
+          <img src="./img/star.jpg" alt="star picture">
+          <div class="overview-text">Stars</div>
+        </div>
+        <div class="overview">
+          <img src="./img/planet.jpg" alt="planet picture">
+          <div class="overview-text">Planets</div>
+        </div>
+      </div>
+    </div>
+    <div class="quote">
+      <div class="quote-text"></div>
+    </div>
     <div class="auth-footer"></div>
   </div>
   <div class="footer"></div>
