Extend quote section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       </div>
     </div>
     <div class="quote">
-      <div class="quote-text"></div>
+      <div class="quote-text">"Somewhere, something incredible is waiting to be known."</div>
+      <div class="quote-author">-Sharon Begley</div>
     </div>
     <div class="auth-footer"></div>
   </div>
