Expand auth-footer and footer

--- a/index.html
+++ b/index.html
@@ -49,8 +49,20 @@
       <div class="quote-text">"Somewhere, something incredible is waiting to be known."</div>
       <div class="quote-author">-Sharon Begley</div>
     </div>
-    <div class="auth-footer"></div>
+    <div class="auth-footer">
+      <div>
+        <div class="auth-footer-call">
+          Let`s explore unseen places together!
+        </div>
+        <div class="auth-footer-paragraph">
+          Sign up to explore vast and marvellous horizons!
+        </div>
+      </div>
+      <button class="auth-footer-sign-up"></button>
+    </div>
   </div>
-  <div class="footer"></div>
+  <div class="footer">
+    Copyright © The Odin Project 2022
+  </div>
 </body>
 </html>
