Add text to auth-footer button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Space</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="header">
@@ -58,7 +59,7 @@
           Sign up to explore vast and marvellous horizons!
         </div>
       </div>
-      <button class="auth-footer-sign-up"></button>
+      <button class="auth-footer-sign-up">Sign up</button>
     </div>
   </div>
   <div class="footer">
