Expand header styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <div class="header">
-    <img src="./img/globe-logo.png" alt="header logo">
+    <div class="header-logo">
+      <img src="./img/globe-logo.png" alt="header logo">
+      <span>Space</span>
+    </div>
     <ul>
         <li><a href="#">Search</a></li>
         <li><a href="#">Community</a></li>
