Extend auth-header styles

--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
   </div>
   <div class="content">
     <div class="auth-header">
-        <div>
-          <div>Join us</div>
-          <div>Let`s discover space together!</div>
-          <button>Sign up</button>
-        </div>
-        <img src="./img/earth-sunset.jpg" alt="auth header picture">
+        <p id="auth-header-upper">Join us</p>
+        <p id="auth-header-lower">Let`s discover space together!</p>
+        <button>Sign up</button>
     </div>  
     <div class="pictures">
       <div class="pictures-header">Amazing views from different parts of space</div>
