Extend quote styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href="#">Search</a></li>
         <li><a href="#">Community</a></li>
-        <li><a href="#">Log in</a></li>
+        <li><a href="#">Log In</a></li>
     </ul>
   </div>
   <div class="content">
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="quote">
-      <div class="quote-text">"Somewhere, something incredible is waiting to be known."</div>
+      <div class="quote-text"><em>"Somewhere, something incredible is waiting to be known."</em></div>
       <div class="quote-author">-Sharon Begley</div>
     </div>
     <div class="auth-footer">
