Extend auth-footer styles

--- a/index.html
+++ b/index.html
@@ -51,15 +51,17 @@
       <div class="quote-author">-Sharon Begley</div>
     </div>
     <div class="auth-footer">
-      <div>
-        <div class="auth-footer-call">
-          Let`s explore unseen places together!
+      <div class="auth-footer-box">
+        <div class="auth-footer-text">
+          <div id="auth-footer-call">
+            Let`s explore unseen places together!
+          </div>
+          <div id="auth-footer-paragraph">
+            Sign up to explore vast and marvellous horizons!
+          </div>
         </div>
-        <div class="auth-footer-paragraph">
-          Sign up to explore vast and marvellous horizons!
-        </div>
+        <button class="auth-footer-sign-up">Sign up</button>
       </div>
-      <button class="auth-footer-sign-up">Sign up</button>
     </div>
   </div>
   <div class="footer">
